--- a/Proj2.html
+++ b/Proj2.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Leão de Juda</h1>
-    <img scr="iamgens/Juda.jpg"/>
+    <img scr="imagens/Juda.jpg"/>
   </body>
 </html>
