Historia Leão de Judá

--- a/Proj2.html
+++ b/Proj2.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Leão de Juda</h1>
-    <img scr="imagens/Juda.jpg"/>
+    <h1>Historia - Leão de Judá </h1>
+    <h1>Quem foi Leão de Judá?</h1>
+    <img src="Proj2-Leão/Juda.jpg" />
   </body>
 </html>
